@@ -1193,7 +1193,7 @@ begin
                     c : scanner.calendar.time := scanner.calendar.time( to_numeric( se ) );
                  begin
                     c := c + duration( to_numeric( term2 ) );
-                    se := to_unbounded_string( long_float( c ) );
+                    se := to_unbounded_string( long_long_integer'image( long_long_integer( c ) ) );
                  end;
               end if;
            elsif operator = "-" then
@@ -1202,7 +1202,7 @@ begin
                     c : scanner.calendar.time := scanner.calendar.time( to_numeric( se ) );
                  begin
                     c := c - duration( to_numeric( term2 ) );
-                    se := to_unbounded_string( long_float( c ) );
+                    se := to_unbounded_string( long_long_integer'image( long_long_integer( c ) ) );
                  end;
               end if;
            end if;
@@ -1213,7 +1213,7 @@ begin
                     c : scanner.calendar.time := scanner.calendar.time( to_numeric( term2 ) );
                  begin
                     c := duration( to_numeric( se ) ) + c;
-                    se := to_unbounded_string( long_float( c ) );
+                    se := to_unbounded_string( long_long_integer'image( long_long_integer( c ) ) );
                  end;
               end if;
            elsif operator = "-" then
@@ -1744,9 +1744,11 @@ begin
            kind := identifiers( t ).kind;
         elsif identifiers( t ).class = subClass or             -- type cast
            identifiers( t ).class = typeClass then
-           if identifiers( getBaseType( t ) ).list then        -- array cast?
-              err( "cannot typecast by array types...perhaps you wanted an array variable" ); -- because we can't
-           end if;                               -- represent array types
+           if getUniType( kind ) = uni_string_t or   -- index must be scalar
+              getUniType( kind ) = root_record_t or
+              identifiers( getBaseType( kind ) ).list then
+              err( "array index must be a scalar type" );
+           end if;
            castType := t;                        -- in expressiosn (yet)
            expect( symbol_t, "(" );
            ParseExpression( f, kind );
@@ -3798,6 +3800,9 @@ begin
      -- limited types
 
      if token = limited_t then                               -- abstract type?
+        if identifiers( newtype_id ).noVar then
+           err( "abstract types don't need to be limited types" );
+        end if;
         identifiers( newtype_id ).limit := true;             -- no variables
         expect( limited_t );
      end if;
@@ -3852,6 +3857,14 @@ begin
    if token = abstract_t then                              -- abstract type?
       identifiers( newtype_id ).noVar := true;             -- no variables
       expect( abstract_t );
+   end if;
+
+   if token = limited_t then                               -- limited type?
+      if identifiers( newtype_id ).noVar then
+         err( "abstract types don't need to be limited types" );
+      end if;
+      identifiers( newtype_id ).limit := true;             -- no variables
+      expect( limited_t );
    end if;
 
    ParseIdentifier( parent_id );                           -- old type
