@@ -1,0 +1,2 @@
+current_time : calendar.time := calendar.clock;
+current_time := 1.0 - current_time; -- minus not allowed
